fixing gap behavior

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -107,8 +107,10 @@
   .header{
     height: 96px;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 2rem;
     align-items: center;
+    padding: 0 2rem;
     position: fixed;
     z-index: 1;
   }
@@ -124,11 +126,11 @@
   }
 
   .nav{
-    width: auto;
+    width: 100%;
     height: auto;
     flex-direction: row;
-    justify-content: center;
-    gap: 6rem;
+    justify-content: space-between;
+
     position: static;
     padding: 0;
     background-color: transparent;
@@ -149,5 +151,12 @@
 
   .nav .yellow_button{
     width: 180px;
+  }
+}
+
+@media(min-width: 1200px){
+
+  .header{
+    gap: 3rem;
   }
 }
